HTML fully done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
-    <title>My Website</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Merriweather:wght@400;700;900&display=swap');
+        </style>
+        <link rel="stylesheet" href="style/style.css">
+        <title>New Year New Mission</title>
+    </head>
+    <body>
+        <div class="container">
+            <header>
+                <scetion>
+                    <h2>Happy New Year</h2>
+                    <h1>New Year Party Celebration</h1>
+                </scetion>
+            </header>
+            <main>
+                <section class="offer">
+                    <h1>65% OFF</h1>
+                    <h3 class="h-secondry">OUR HOLIDAY DEALS ARE BETTER</h3>
+                    <h2>ALL CATEGORIES</h2>
+                    <img src="./image/New Year Photo.png" alt="New Year Photo">
+                </section>
+                <section class="midnight-pirty">
+                    <div class="content">
+                        <h1>Welcome to midnight party</h1>
+                        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum
+                            sedsodales risus ut pellentesque vel euismod. </p>
+                        <a href="#">Join Now</a>
+                    </div>
+                    <img src="./image/Group 70.png" alt="A photo of 2024">
+                </section>
+                <section class="venau">
+                    <p><span>Place:</span> New Park Hotel </p>
+                    <p><span>Date:</span> 31 December Night 2023</p>
+                    <p><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
+                    <button>Join Now</button>
+                </section>
+                <section class="Best-offer">
+                    <div class="first-content">
+                        <h3 class="h-secondry">NEW BEST OFFER</h3>
+                        <h1>Coming Soon</h1>
+                        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum
+                            sed sodales risus ut pellentesque vel euismod. </p>
+                    </div>
+                    <div class="second-content">
+                        <img src="./image/Ellipse 1.png" alt="People are enjoying">
+                    </div>
+                    <div class="third-content">
+                        <h2>2024</h2>
+                        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                        <img src="./image/Group 96.png" alt="Happy New Year">
+                    </div>
+                </section>
+                <section class="holidays-sale">
+                    <h3 class="h-secondry" style="color: #070211;">WHAT IS FUNCTIONAL</h3>
+                    <h1>Holidays Sale 50%</h1>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus
+                        quam id fermentum amet amet sit consectetur.</p>
+                    <img src="./image/Group 75.png" alt="50% Discount">
+                    <img src="./image/Group 44.png" alt="Magic Box">
+                </section>
+                <section class="best-gift">
+                    <h3 class="h-secondry">THE BEST GIFTS</h3>
+                    <h2>Our Awesome Portfolio</h2>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                        sodales risus ut pellentesque vel euismod.</p>
+                    <div class="photo-container">
+                        <img src="./image/Rectangle 3.png" alt="A Bag">
+                        <img src="./image/Rectangle 4.png" alt="A Black Bag">
+                        <img src="./image/Rectangle 5.png" alt="A Rad Shoe">
+                        <img src="./image/Rectangle 6.png" alt="A Black Shoe">
+                        <img src="./image/Rectangle 7.png" alt="A Sunglass">
+                        <img src="./image/Rectangle 8.png" alt="Rings">
+                    </div>
+                </section>
+                <section class="newsletter">
+                    <img src="./image/Group 61.png" alt="Email Logo">
+                    <h1>Subscribe Newsletter</h1>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                        sodales risus ut pellentesque vel euismod.</p>
+                    <form action="">
+                        <input type="email" placeholder="user@gmail.com">
+                        <input type="submit" value="Subscribe">
+                    </form>
+                </section>
+            </main>
+        </div>
+        <footer>
+            <div class="address">
+                <p>44, Big Building Roosevelt Street <br> Beach Gardens Florida 33410</p>
+                <div>
+                    <div>
+                        <img src="./image/Call.png" alt="Call Icon">
+                        <p>+00 123 584 124</p>
+                    </div>
+                    <div>
+                        <img src="./image/Website.png" alt="Website Icon">
+                        <p>www.website.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="social-icon">
+                <a href="#"><img src="./image/Facebook.png" alt="Facebook Logo"></a>
+                <a href="#"><img src="./image/Instagram.png" alt="Instagram Logo"></a>
+                <a href="#"><img src="./image/Twitter.png" alt="Twitter Logo"></a>
+                <a href="#"><img src="./image/Linkedin.png" alt="Linkedin Logo"></a>
+            </div>
+            <div class="copyrigt">
+                <p>2024, All Rights Reserved.</p>
+                <a href="#">Unsubscribe</a>
+            </div>
+        </footer>
+    </body>
 </html>
