Header section style done

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <body>
         <div class="container">
             <header>
-                <scetion>
+                <section>
                     <h2>Happy New Year</h2>
                     <h1>New Year Party Celebration</h1>
-                </scetion>
+                </section>
             </header>
             <main>
                 <section class="offer">
