--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </section>
                 <section class="midnight-pirty">
                     <div class="content">
-                        <h1>Welcome to midnight party</h1>
+                        <h1>Welcome to <br> midnight party</h1>
                         <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum
                             sedsodales risus ut pellentesque vel euismod. </p>
                         <a href="#">Join Now</a>
@@ -39,11 +39,12 @@
                     <p><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
                     <button>Join Now</button>
                 </section>
-                <section class="Best-offer">
+                <section class="best-offer">
                     <div class="first-content">
                         <h3 class="h-secondry">NEW BEST OFFER</h3>
-                        <h1>Coming Soon</h1>
-                        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum
+                        <h2 class="h-primary">Coming Soon</h2>
+                        <p class="p-primary">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                            molestie malesuada. Ipsum
                             sed sodales risus ut pellentesque vel euismod. </p>
                     </div>
                     <div class="second-content">
@@ -51,14 +52,14 @@
                     </div>
                     <div class="third-content">
                         <h2>2024</h2>
-                        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                        <p class="p-primary">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
                         <img src="./image/Group 96.png" alt="Happy New Year">
                     </div>
                 </section>
                 <section class="holidays-sale">
                     <h3 class="h-secondry" style="color: #070211;">WHAT IS FUNCTIONAL</h3>
                     <h1>Holidays Sale 50%</h1>
-                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    <p class="p-primary">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
                         molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus
                         quam id fermentum amet amet sit consectetur.</p>
                     <img src="./image/Group 75.png" alt="50% Discount">
@@ -66,8 +67,9 @@
                 </section>
                 <section class="best-gift">
                     <h3 class="h-secondry">THE BEST GIFTS</h3>
-                    <h2>Our Awesome Portfolio</h2>
-                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    <h2 class="h-primary">Our Awesome Portfolio</h2>
+                    <p class="p-primary">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                        malesuada. Ipsum sed
                         sodales risus ut pellentesque vel euismod.</p>
                     <div class="photo-container">
                         <img src="./image/Rectangle 3.png" alt="A Bag">
@@ -80,12 +82,15 @@
                 </section>
                 <section class="newsletter">
                     <img src="./image/Group 61.png" alt="Email Logo">
-                    <h1>Subscribe Newsletter</h1>
-                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    <h2 class="h-primary">Subscribe Newsletter</h2>
+                    <p class="p-primary">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                        malesuada. Ipsum sed
                         sodales risus ut pellentesque vel euismod.</p>
                     <form action="">
-                        <input type="email" placeholder="user@gmail.com">
-                        <input type="submit" value="Subscribe">
+                        <div>
+                            <input type="email" placeholder="user@gmail.com">
+                            <input type="submit" value="Subscribe">
+                        </div>
                     </form>
                 </section>
             </main>
@@ -104,12 +109,14 @@
                     </div>
                 </div>
             </div>
+            <hr>
             <div class="social-icon">
                 <a href="#"><img src="./image/Facebook.png" alt="Facebook Logo"></a>
                 <a href="#"><img src="./image/Instagram.png" alt="Instagram Logo"></a>
                 <a href="#"><img src="./image/Twitter.png" alt="Twitter Logo"></a>
                 <a href="#"><img src="./image/Linkedin.png" alt="Linkedin Logo"></a>
             </div>
+            <hr>
             <div class="copyrigt">
                 <p>2024, All Rights Reserved.</p>
                 <a href="#">Unsubscribe</a>
