--- a/index.html
+++ b/index.html
@@ -57,13 +57,19 @@
                     </div>
                 </section>
                 <section class="holidays-sale">
-                    <h3 class="h-secondry" style="color: #070211;">WHAT IS FUNCTIONAL</h3>
-                    <h1>Holidays Sale 50%</h1>
-                    <p class="p-primary">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus
-                        quam id fermentum amet amet sit consectetur.</p>
-                    <img src="./image/Group 75.png" alt="50% Discount">
-                    <img src="./image/Group 44.png" alt="Magic Box">
+                    <div class="text-content">
+                        <h3 class="h-secondry" style="color: #070211;">WHAT IS FUNCTIONAL</h3>
+                        <h1> <span>Holidays</span> Sale 50%</h1>
+                        <p class="p-primary">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus
+                            quam id fermentum amet amet sit consectetur.</p>
+                    </div>
+                    <div class="image-container">
+                        <img class="img1" src="./image/Group 74.png" alt="50% Discount">
+                        <img class="img2" src="./image/Group 44.png" alt="Magic Box">
+                        <img class="img3" src="./image/Rectangle 1.png" alt="a girl photo">
+                        <img class="img4" src="./image/Rectangle 2.png" alt="red box">
+                    </div>
                 </section>
                 <section class="best-gift">
                     <h3 class="h-secondry">THE BEST GIFTS</h3>
