Content are edited

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                 <section class="midnight-pirty">
                     <div class="content">
                         <h1>Welcome to <br> midnight party</h1>
-                        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum
-                            sedsodales risus ut pellentesque vel euismod. </p>
+                        <p>Join us as we count down to the New Year at our Midnight Party! As the clock strikes twelve,
+                            we'll celebrate with music, dancing, and a spectacular fireworks display. Don't miss out on
+                            the most exciting party of the year! </p>
                         <a href="#">Join Now</a>
                     </div>
                     <img src="./image/Group 70.png" alt="A photo of 2024">
@@ -43,16 +44,17 @@
                     <div class="first-content">
                         <h3 class="h-secondry">NEW BEST OFFER</h3>
                         <h2 class="h-primary">Coming Soon</h2>
-                        <p class="p-primary">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-                            molestie malesuada. Ipsum
-                            sed sodales risus ut pellentesque vel euismod. </p>
+                        <p class="p-primary">Stay tuned for our upcoming offer! We're preparing an unbeatable deal that
+                            you won't want to miss. Sign up for our newsletter to be the first to know when it's
+                            available. </p>
                     </div>
                     <div class="second-content">
                         <img src="./image/Ellipse 1.png" alt="People are enjoying">
                     </div>
                     <div class="third-content">
                         <h2>2024</h2>
-                        <p class="p-primary">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                        <p class="p-primary"> Join us as we embark on new adventures and continue to push the boundaries
+                            of what's possible. Here's to a prosperous and fulfilling 2024!</p>
                         <img src="./image/Group 96.png" alt="Happy New Year">
                     </div>
                 </section>
@@ -60,9 +62,10 @@
                     <div class="text-content">
                         <h3 class="h-secondry" style="color: #070211;">WHAT IS FUNCTIONAL</h3>
                         <h1> <span>Holidays</span> Sale 50%</h1>
-                        <p class="p-primary">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-                            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus
-                            quam id fermentum amet amet sit consectetur.</p>
+                        <p class="p-primary">Our products are designed with functionality at their core. With intuitive
+                            interfaces, seamless workflows, and user-friendly features, we ensure that our products not
+                            only look good, but also enhance your productivity and efficiency. Explore our range of
+                            functional designs now.</p>
                     </div>
                     <div class="image-container">
                         <img class="img1" src="./image/Group 74.png" alt="50% Discount">
@@ -74,9 +77,10 @@
                 <section class="best-gift">
                     <h3 class="h-secondry">THE BEST GIFTS</h3>
                     <h2 class="h-primary">Our Awesome Portfolio</h2>
-                    <p class="p-primary">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
-                        malesuada. Ipsum sed
-                        sodales risus ut pellentesque vel euismod.</p>
+                    <p class="p-primary">Discover our diverse portfolio showcasing our expertise across a range of
+                        projects. From innovative designs to cutting-edge technology solutions, our work reflects our
+                        commitment to excellence and creativity. Explore our portfolio to see how we transform ideas
+                        into reality.</p>
                     <div class="photo-container">
                         <img src="./image/Rectangle 3.png" alt="A Bag">
                         <img src="./image/Rectangle 4.png" alt="A Black Bag">
@@ -89,9 +93,9 @@
                 <section class="newsletter">
                     <img src="./image/Group 61.png" alt="Email Logo">
                     <h2 class="h-primary">Subscribe Newsletter</h2>
-                    <p class="p-primary">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
-                        malesuada. Ipsum sed
-                        sodales risus ut pellentesque vel euismod.</p>
+                    <p class="p-primary">Stay updated with the latest news, offers, and updates from our team. By
+                        subscribing to our newsletter, you'll receive a regular digest of our new products, upcoming
+                        sales, and exciting announcements directly in your inbox.</p>
                     <form action="">
                         <div>
                             <input type="email" placeholder="user@gmail.com">
